--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
 
-
+<link href="/aos.css" rel="stylesheet">
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 		<!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"> -->
 	
@@ -261,7 +262,9 @@ supportsCssVars() || alert("Please view this in a modern browser that supports C
 		<!-- <script src="viaida.js"></script> -->
 		<script src="new.js"></script>
 
-		
+		<script>
+			AOS.init();
+		  </script>
 	</body>
 </html>
 
