--- a/kontakt.html
+++ b/kontakt.html
@@ -15,6 +15,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
+<link href="/aos.css" rel="stylesheet">
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -73,7 +75,8 @@
 		</svg>
 		
 		<script src="new.js"></script>
-
-        <script src="" async defer></script>
+        <script>
+			AOS.init();
+		  </script>
     </body>
 </html>
