--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
 
-<link href="/aos.css" rel="stylesheet">
+<link href="aos.css" rel="stylesheet">
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     </head>
     <body>
