--- a/concept.html
+++ b/concept.html
@@ -50,7 +50,7 @@
 
         <div class="parent">
   
-            <img class="img" data-aos="fade-right" data-aos-duration="1000" src="img/concept/Bild Concept Wahrheiten finden Abstrakt.jpg" alt="">
+            <img data-aos="fade-right" data-aos-duration="1000" class="img"  src="img/concept/Bild Concept Wahrheiten finden Abstrakt.jpg" alt="">
             <div class="txt" data-aos="fade-left" data-aos-duration="1000">
               <h2>WAHRHEITEN FINDEN</h2>
               <p><span class="first-letter">V</span>ALUE <br> Werte, Normen, Rollen sind wesentliche Aspekte von Identität. Sie zeigen unsere Beziehung zwischen den persönlichen und den gesellschaftlichen Wertigkeiten. </p>
